feat: read version from version.py

--- a/.gitignore
+++ b/.gitignore
@@ -45,8 +45,12 @@ report.html
 demo/test_doubandaily.txt
 htmlcov/
 run.sh
+
 # for eclipse
 .settings
 .eggs/
 .cache/
 venv*/
+
+# Vscode
+.vscode
